syntax = "proto3";
package nicholasdotsol.duality.dex;

option go_package = "github.com/NicholasDotSol/duality/x/dex/types";

import "gogoproto/gogo.proto";
import "dex/reserve_0_and_shares_type.proto";

message TickDataType {
  
  repeated Reserve0AndSharesType reserve0AndShares = 1; 
  repeated string reserve1 = 2 [
      (gogoproto.moretags)   = "yaml:\"reserve1\"",
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
      (gogoproto.nullable)   = false,
      (gogoproto.jsontag) = "reserve1"
  ]; 
}
